--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Login">
+<ion-view hide-nav-bar="true">
   <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
-  <ion-content class="home-background" ng-click="emailLogin()">
+  <ion-content class="home-background" ng-click="emailLogin()" hide-tabs>
     <div class="buffer" style="height: 130px"></div>
 
     <h1 align="center" style="color:#ffffff; font-family: 'Sacramento', cursive; font-size: 8em; font-weight: bold;">Lala</h1>
