--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,4 +1,7 @@
-<ion-view view-title="Account">
+<ion-view>
+  <ion-nav-title class="lalalouie">
+    <h1 align="center" style="font-family: 'Sacramento', cursive; margin-top:3px; color: #82C0BD; font-weight: bold;">Lala Louie</h1>
+  </ion-nav-title>
   <ion-content>
       <div class="row responsive-sm">
         <div class="col" style="margin-top: 8em;">
