--- a/www/templates/photo-detail.html
+++ b/www/templates/photo-detail.html
@@ -1,4 +1,7 @@
-<ion-view view-title="Photo">
+<ion-view>
+  <ion-nav-title class="lalalouie">
+    <h1 align="center" style="font-family: 'Sacramento', cursive; margin-top:3px; color: #82C0BD; font-weight: bold;">Lala Louie</h1>
+  </ion-nav-title>
   <ion-content>
     <ion-list>
       <form ng-submit="button(product)">
