--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,4 +1,7 @@
-<ion-view view-title="Home">
+<ion-view>
+  <ion-nav-title class="lalalouie">
+    <h1 align="center" style="font-family: 'Sacramento', cursive; margin-top:3px; color: #82C0BD; font-weight: bold;">Lala Louie</h1>
+  </ion-nav-title>
   <ion-content class="padding">
     <ion-item class="list card" ng-repeat="product in products">
       <div class="row">
