--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -22,7 +22,7 @@
 
         </div>
         <div class="col">
-          <button class="button button-assertive" ng-click="logout()">Logout</button>
+          <center><button class="button button-assertive" ng-click="logout()">Logout</button></center>
         </div>
 
       </div>
