--- a/www/templates/photo-detail.html
+++ b/www/templates/photo-detail.html
@@ -5,31 +5,39 @@
   <ion-content>
     <ion-list>
       <form ng-submit="button(product)">
-        <div class="row">
-          <div class="col col-33">
-            <img style="height: 140px; width: 140px;" ng-src="{{imgURI}}">
+        <div class="row" style="padding: 1em;">
+          <div class="col width-33">
+            <img style="height: 140px; width: 140px; padding-right: 5%" ng-src="{{imgURI}}">
           </div>
-          <div class="col col-50 col-offset-10">
-            <label class="item item-input inputUpload">
-              <input type="text" ng-model="product.name" placeholder="Product Name">
-            </label>
-            <label class="item item-input inputUploadTop">
-              <input type="text" ng-model="product.tagline" placeholder="Tagline">
-            </label>
-            <label class="item item-input inputUploadTop">
-              <input type="text" ng-model="product.price" placeholder="Price">
-            </label>
+          <div class="col width-67">
+            <div class="list">
+              <label class="item item-input item-floating-label">
+                <span class="input-label" style="font-size: 10px">Product Name</span>
+                <input type="text" ng-model="product.name" placeholder="Product Name">
+              </label>
+
+              <label class="item item-input item-floating-label">
+                <span class="input-label" style="font-size: 10px">Price</span>
+                <input type="text" ng-model="product.price" placeholder="Price">
+              </label>
+
+            </div>
           </div>
         </div>
-
-        <label class="item item-input inputUploadTop">
-          <input type="text" ng-model="product.description" placeholder="Description">
+        <label class="item item-input item-floating-label">
+          <span class="input-label" style="font-size: 10px">Tagline (Keep It Short and Simple!)</span>
+          <input type="text" ng-model="product.tagline" placeholder="Tagline">
         </label>
 
-        <br/>
-        <button type="submit" class="button button-block button-balanced" style="display: flex; flex-direction: column; justify-content: center;">
+        <label class="item item-floating-label">
+          <span class="input-label" style="font-size: 10px; padding-bottom: 5px;">Description</span>
+          <textarea type="text" style="width: 100%; height: 70px; resize:none; rows: 5;" ng-model="product.description" placeholder="Description"></textarea>
+        </label>
+
+      </br>
+        <center><button type="submit" class="button button-balanced">
           Submit
-        </button>
+        </button></center>
       </form>
     </ion-list>
   </ion-content>
