cleaning up design

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -14,7 +14,7 @@
         </div>
         <div class="col" style="margin-top: 25px; text-align: right">
           <i class="ion-pricetag assertive"></i>
-          ${{product.price}}
+          {{product.price | currency}}
         </div>
       </div>
 
