--- a/www/templates/photo-detail.html
+++ b/www/templates/photo-detail.html
@@ -13,25 +13,25 @@
             <div class="list">
               <label class="item item-input item-floating-label">
                 <span class="input-label" style="font-size: 10px">Product Name</span>
-                <input type="text" ng-model="product.name" placeholder="Product Name">
+                <input maxlength="15" type="text" ng-model="product.name" placeholder="Product Name">
               </label>
 
               <label class="item item-input item-floating-label">
                 <span class="input-label" style="font-size: 10px">Price</span>
-                <input type="text" ng-model="product.price" placeholder="Price">
+                <input maxlength="6" type="tel" ng-model="product.price" placeholder="Price">
               </label>
 
             </div>
           </div>
         </div>
         <label class="item item-input item-floating-label">
-          <span class="input-label" style="font-size: 10px">Tagline (Keep It Short and Simple!)</span>
-          <input type="text" ng-model="product.tagline" placeholder="Tagline">
+          <span class="input-label" style="font-size: 10px">Tagline (40 characters)</span>
+          <input maxlength="40" type="text" ng-model="product.tagline" placeholder="Tagline">
         </label>
 
         <label class="item item-floating-label">
-          <span class="input-label" style="font-size: 10px; padding-bottom: 5px;">Description</span>
-          <textarea type="text" style="width: 100%; height: 70px; resize:none; rows: 5;" ng-model="product.description" placeholder="Description"></textarea>
+          <span class="input-label" style="font-size: 10px; padding-bottom: 5px;">Description (140 characters)</span>
+          <textarea maxlength="140" type="text" style="width: 100%; height: 70px; resize:none; rows: 5;" ng-model="product.description" placeholder="Description"></textarea>
         </label>
 
       </br>
