--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -12,9 +12,9 @@
             <p>{{product.tagline}}</p>
           </div>
         </div>
-        <div class="col" style="margin-top: 25px; text-align: right">
+        <div class="col" style="margin-top: 25px; text-align: right; font-size: 13px;">
           <i class="ion-pricetag assertive"></i>
-          {{product.price | currency}}
+          {{product.price | currency:"$":0}}
         </div>
       </div>
 
