--- a/www/templates/partials/login.html
+++ b/www/templates/partials/login.html
@@ -2,15 +2,15 @@
   <div class="panel-body">
     <form name="login" ng-model="user" ng-submit="login(user)">
       <label class="item item-input loginForm">
-        <i class="ion-person"></i>
-        <input class="loginInput" type="text" ng-model="user.name" placeholder="Username">
+        <i class="ion-person" style="color: #EF8065"></i>
+        <input class="loginInput" type="text" style="color: #EF8065" ng-model="user.name" placeholder="Username">
       </label>
       <label class="item item-input loginForm">
-        <i class="ion-email"></i>
+        <i class="ion-email" style="color: #EAC773"></i>
         <input class="loginInput" type="text" ng-model="user.email" placeholder="Email">
       </label>
       <label class="item item-input loginForm">
-        <i class="ion-locked"></i>
+        <i class="ion-locked" style="color: #4E8B85"></i>
         <input class="loginInput" type="password" ng-model="user.password" placeholder="Password">
       </label>
     </form>
