--- a/www/templates/photo-detail.html
+++ b/www/templates/photo-detail.html
@@ -1,4 +1,6 @@
 <ion-view>
+  <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+
   <ion-nav-title class="lalalouie">
     <h1 align="center" style="font-family: 'Sacramento', cursive; margin-top:3px; color: #82C0BD; font-weight: bold;">Lala Louie</h1>
   </ion-nav-title>
@@ -12,30 +14,30 @@
           <div class="col width-67">
             <div class="list">
               <label class="item item-input item-floating-label">
-                <span class="input-label" style="font-size: 10px">Product Name</span>
-                <input maxlength="15" type="text" ng-model="product.name" placeholder="Product Name">
+                <span class="input-label" style="font-family: 'Quicksand', sans-serif; font-weight: bold; font-size: 10px">Product Name</span>
+                <input maxlength="15" type="text" style="font-family: 'Quicksand', sans-serif; font-size: 12px;" ng-model="product.name" placeholder="Product Name">
               </label>
 
               <label class="item item-input item-floating-label">
-                <span class="input-label" style="font-size: 10px">Price</span>
-                <input maxlength="5" type="tel" ng-model="product.price" placeholder="Price">
+                <span class="input-label" style="font-family: 'Quicksand', sans-serif; font-weight: bold; font-size: 10px">Price</span>
+                <input maxlength="5" type="tel" style="font-family: 'Quicksand', sans-serif; font-size: 12px;" ng-model="product.price" placeholder="Price">
               </label>
 
             </div>
           </div>
         </div>
         <label class="item item-input item-floating-label">
-          <span class="input-label" style="font-size: 10px">Tagline (40 characters)</span>
-          <input maxlength="40" type="text" ng-model="product.tagline" placeholder="Tagline">
+          <span class="input-label" style="font-family: 'Quicksand', sans-serif; font-weight: bold; font-size: 10px">Tagline (40 characters)</span>
+          <input maxlength="40" type="text" style="font-family: 'Quicksand', sans-serif; font-size: 12px;" ng-model="product.tagline" placeholder="Tagline">
         </label>
 
         <label class="item item-floating-label">
-          <span class="input-label" style="font-size: 10px; padding-bottom: 5px;">Description (140 characters)</span>
-          <textarea maxlength="140" type="text" style="width: 100%; height: 70px; resize:none; rows: 5;" ng-model="product.description" placeholder="Description"></textarea>
+          <span class="input-label" style="font-family: 'Quicksand', sans-serif; font-weight: bold; font-size: 10px; padding-bottom: 5px;">Description (140 characters)</span>
+          <textarea maxlength="140" type="text" style="font-family: 'Quicksand', sans-serif; font-size: 12px; width: 100%; height: 70px; resize:none; rows: 5;" ng-model="product.description" placeholder="Description"></textarea>
         </label>
 
       </br>
-        <center><button type="submit" class="button button-balanced">
+        <center><button type="submit" class="button button-balanced" style="font-family: 'Quicksand', sans-serif; font-weight: bold;">
           Submit
         </button></center>
       </form>
