--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,30 +1,36 @@
 <ion-view>
+  <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
   <ion-nav-title class="lalalouie">
     <h1 align="center" style="font-family: 'Sacramento', cursive; margin-top:3px; color: #82C0BD; font-weight: bold;">Lala Louie</h1>
   </ion-nav-title>
   <ion-content>
+    <div class="list card photoChoice">
+      <div class="item item-divider title">
+        <h2 align="center" style="font-family: 'Quicksand', sans-serif; font-weight: bold; color: #ffffff;";>Your Account</h2>
+      </div>
       <div class="row responsive-sm">
-        <div class="col" style="margin-top: 8em;">
-          <h2 class="item item-icon-left">
-            <i class="icon ion-person"></i>
+        <div class="col">
+          <h2 class="item item-icon-left" style="font-family: 'Quicksand', sans-serif; font-size: 12px">
+            <i class="icon ion-person" style="color: #EF8065"></i>
             Edit username
           </h2>
 
-          <h2 class="item item-icon-left">
-            <i class="icon ion-email"></i>
+          <h2 class="item item-icon-left" style="font-family: 'Quicksand', sans-serif; font-size: 12px">
+            <i class="icon ion-email" style="color: #EAC773"></i>
             Edit email address
           </h2>
 
-          <h2 class="item item-icon-left">
-            <i class="icon ion-locked"></i>
+          <h2 class="item item-icon-left" style="font-family: 'Quicksand', sans-serif; font-size: 12px">
+            <i class="icon ion-locked" style="color: #4E8B85"></i>
             Edit password
           </h2>
 
+          <center><button class="button button-assertive" style="font-family: 'Quicksand', sans-serif; font-weight: bold; margin-top:1.5em;" ng-click="logout()">Logout</button></center>
+
         </div>
-        <div class="col">
-          <center><button class="button button-assertive" ng-click="logout()">Logout</button></center>
-        </div>
+      </div>
 
       </div>
+    </div>
   </ion-content>
 </ion-view>
