--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,4 +1,6 @@
 <ion-view>
+  <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+
   <ion-nav-title class="lalalouie">
     <h1 align="center" style="font-family: 'Sacramento', cursive; margin-top:3px; color: #82C0BD; font-weight: bold;">Lala Louie</h1>
   </ion-nav-title>
@@ -8,24 +10,24 @@
         <div class="col col-75">
           <div class="item item-avatar">
             <img src={{product.seller_image}}>
-            <h2 style="margin-top:.6em;">{{product.name}}</h2>
+            <h2 style="font-family: 'Quicksand', sans-serif; margin-top:.6em;">{{product.name}}</h2>
           </div>
         </div>
-        <div class="col" style="margin-top: 25px; text-align: right; font-size: 13px;">
+        <div class="col" style="font-family: 'Quicksand', sans-serif; margin-top: 25px; text-align: right; font-size: 13px;">
           <i class="ion-pricetag assertive"></i>
           {{product.price | currency:"$":0}}
         </div>
       </div>
-      <div class="row" style="padding-left: 1em; padding-right: 1em; padding-bottom:1em;">
+      <div class="row" style="font-family: 'Quicksand', sans-serif; padding-left: 1em; padding-right: 1em; padding-bottom:1em;">
         <p>{{product.tagline}}</p>
       </div>
 
       <div class="item item-body">
         <img class="full-image" src="{{product.image}}">
-        <p>
+        <p style="font-family: 'Quicksand', sans-serif;">
           {{product.description}}
         </p>
-        <p>
+        <p style="font-size: 12px;">
           <a class="subdued">1 Like</a>
           <a class="subdued">5 Comments</a>
         </p>
