resized font again

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -10,17 +10,17 @@
       </div>
       <div class="row responsive-sm">
         <div class="col">
-          <h2 class="item item-icon-left" style="font-family: 'Quicksand', sans-serif; font-size: 12px">
+          <h2 class="item item-icon-left item-floating-label" style="font-family: 'Quicksand', sans-serif; font-size: 13px">
             <i class="icon ion-person" style="color: #EF8065"></i>
             Edit username
           </h2>
 
-          <h2 class="item item-icon-left" style="font-family: 'Quicksand', sans-serif; font-size: 12px">
+          <h2 class="item item-icon-left" style="font-family: 'Quicksand', sans-serif; font-size: 13px">
             <i class="icon ion-email" style="color: #EAC773"></i>
             Edit email address
           </h2>
 
-          <h2 class="item item-icon-left" style="font-family: 'Quicksand', sans-serif; font-size: 12px">
+          <h2 class="item item-icon-left" style="font-family: 'Quicksand', sans-serif; font-size: 13px">
             <i class="icon ion-locked" style="color: #4E8B85"></i>
             Edit password
           </h2>
