--- a/www/lib/ionic/css/ionic.css
+++ b/www/lib/ionic/css/ionic.css
@@ -6300,8 +6300,8 @@ button.item.item-button-right {
 .item-avatar .item-content,
 .item-avatar-left,
 .item-avatar-left .item-content {
-  padding-left: 72px;
-  min-height: 72px; }
+  padding-left: 62px;
+  min-height: 60px; }
   .item-avatar > img:first-child,
   .item-avatar .item-image,
   .item-avatar .item-content > img:first-child,
@@ -6311,18 +6311,18 @@ button.item.item-button-right {
   .item-avatar-left .item-content > img:first-child,
   .item-avatar-left .item-content .item-image {
     position: absolute;
-    top: 16px;
-    left: 16px;
-    max-width: 40px;
-    max-height: 40px;
+    top: 0px;
+    left: 0px;;
+    max-width: 55px;
+    max-height: 55px;
     width: 100%;
     height: 100%;
     border-radius: 50%; }
 
 .item-avatar-right,
 .item-avatar-right .item-content {
-  padding-right: 72px;
-  min-height: 72px; }
+  padding-right: 60px;
+  min-height: 60px; }
   .item-avatar-right > img:first-child,
   .item-avatar-right .item-image,
   .item-avatar-right .item-content > img:first-child,
@@ -6330,8 +6330,8 @@ button.item.item-button-right {
     position: absolute;
     top: 16px;
     right: 16px;
-    max-width: 40px;
-    max-height: 40px;
+    max-width: 55px;
+    max-height: 55px;
     width: 100%;
     height: 100%;
     border-radius: 50%; }
